--- a/glenns_feature.html
+++ b/glenns_feature.html
@@ -1,7 +1,7 @@
 <html>
   <head> </head>
   <body>
-    <h1>OMGEEEE SO ORSOME!</h1>
+    <h1>OMGEEEE SO AweSOME!</h1>
     <main>I mean, look at this content</main>
   </body>
 </html>
